# mopenstack

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  USAGE.md  docker-compose.yml  pyproject.toml
mopenstack/: __init__.py  bootstrap.py  bootstrap_silent.py  main.py
mopenstack/common/: __init__.py  config.py  database.py
mopenstack/models/: keystone.py  neutron.py  nova.py
mopenstack/services/: __init__.py
mopenstack/services/keystone/: __init__.py  auth.py  router.py  schemas.py  service.py
mopenstack/services/nova/: __init__.py  router.py  schemas.py  service.py
tests/integration/: test_error_handling.py  test_glance_mock.py  test_keystone.py  test_nova.py  test_openstack_cli_compatibility.py
tests/unit/: test_bootstrap.py  test_keystone_schemas.py  test_nova_schemas.py
